syntax = "proto3";
package constants;
option go_package = "github.com/bptlab/cepta/constants";

option java_multiple_files = true;
option java_package = "org.bptlab.cepta.constants";
// option java_outer_classname = "Constants";

enum Topics {
  LIVE_TRAIN_DATA = 0;
  PLANNED_TRAIN_DATA = 1;
  PREDICTED_TRAIN_DATA = 2;
  TRAIN_INFO_DATA = 3;
  CHECKPOINT_DATA = 4;
  DELAY_NOTIFICATIONS = 5;
  WEATHER_DATA = 6;
}